Semi-final changes

--- a/proxy/templates/appPage.html
+++ b/proxy/templates/appPage.html
@@ -11,7 +11,9 @@
 <script src="http://vjs.zencdn.net/7.8.4/video.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/videojs-youtube/2.6.1/Youtube.min.js"></script>
 
+
 <head>
+    <link rel="icon" type="image/png" href="http://127.0.0.1:4000/static/icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body,
@@ -22,7 +24,7 @@
         
         .bg {
             /* The image used */
-            background-image: url('https://i.ytimg.com/vi/1waNpmtYSIM/maxresdefault.jpg');
+            background-image: url('./static/bk.jpg');
             /* Full height */
             height: 100%;
             /* Center and scale the image nicely */
@@ -47,6 +49,7 @@
             font-size: 40px;
         }
     </style>
+
 
 </head>
 
