--- a/proxy/templates/videoPage.html
+++ b/proxy/templates/videoPage.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.css">
+<script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.js">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-xmlrpc/0.4.3/jquery.xmlrpc.js">
+</script>
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
+<link href="https://vjs.zencdn.net/7.8.4/video-js.css" rel="stylesheet" />
+<script src="http://vjs.zencdn.net/7.8.4/video.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/videojs-youtube/2.6.1/Youtube.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 <head>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.css">
-    <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.js">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-xmlrpc/0.4.3/jquery.xmlrpc.js">
-    </script>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
-    <link href="https://vjs.zencdn.net/7.8.4/video-js.css" rel="stylesheet" />
-    <script src="http://vjs.zencdn.net/7.8.4/video.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/videojs-youtube/2.6.1/Youtube.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
+    <link rel="icon" type="image/png" href="http://127.0.0.1:4000/static/icon.ico" />
     <style>
         body {
             margin: 0 auto;
@@ -84,8 +85,8 @@
                         handleError(xhr, status, '');
                     }
                     console.log("response for answer creation" + data)
-                    console.log(data.question)
-                    updateAnswerstable(data.question)
+                    console.log(question)
+                    updateAnswerstable(question)
                 },
                 error: function(xhr, textStatus, errorThrown) {
                     alert("Question process is down :(")
@@ -283,11 +284,8 @@
                 console.log(name)
                 console.log(newAnswer)
                 console.log(question)
-                    // check if there is a question selected
-                if (question > 0) {
-                    addNewAnswer(user, name, newAnswer, question)
-                } else
-                    alert("Please choose a question to answer")
+                addNewAnswer(user, name, newAnswer, question)
+
             })
 
             // shows answer table
@@ -295,30 +293,35 @@
                 // gets the id of the question that is selected and the answers to that question
                 question_id = $('input[name=radioQ]:checked').val()
                 console.log(question_id)
-                updateAnswerstable(question_id)
-                    // show answers table
-                document.getElementById("ListA").style.display = "block";
-                document.getElementById("ListA").style.marginTop = "25px";
-                // sends request to get question info for display
-                $.ajax({
-                    url: '/QA/' + id + '/' + question_id,
-                    type: "GET",
-                    dataType: "json",
-                    success: function(data) {
-                        if (data === "failure") {
-                            handleError(xhr, status, '');
+                    // check if question exists
+                if (question_id == undefined) {
+                    alert("Please choose a question to answer")
+                } else {
+                    updateAnswerstable(question_id)
+                        // show answers table
+                    document.getElementById("ListA").style.display = "block";
+                    document.getElementById("ListA").style.marginTop = "25px";
+                    // sends request to get question info for display
+                    $.ajax({
+                        url: '/QA/' + id + '/' + question_id,
+                        type: "GET",
+                        dataType: "json",
+                        success: function(data) {
+                            if (data === "failure") {
+                                handleError(xhr, status, '');
+                            }
+                            info = data["QA"]
+                            console.log("cabeçalho")
+                            console.log(question_id);
+                            console.log(data)
+                            document.getElementById("info1").innerHTML = 'Time: ' + info["time"] + ' Question: ' + info["question"];
+                            document.getElementById("info2").innerHTML = 'User: ' + info["user"] + ' ' + info["name"];
+                        },
+                        error: function(xhr, textStatus, errorThrown) {
+                            alert("Question process is down :(")
                         }
-                        info = data["QA"][0]
-                        console.log("cabeçalho")
-                        console.log(question_id);
-                        console.log(data)
-                        document.getElementById("info1").innerHTML = 'Time: ' + info["time"] + ' Question: ' + info["question"];
-                        document.getElementById("info2").innerHTML = 'User: ' + info["user"] + ' ' + info["name"];
-                    },
-                    error: function(xhr, textStatus, errorThrown) {
-                        alert("Question process is down :(")
-                    }
-                })
+                    })
+                }
             })
 
             // show text boxes to add new question
